﻿0.1.1 - Initial Source by L0RE

...

[B]Version 1.0.1  (17.08.2019)[/B] by realvito
- fixed: Rubrik = Sendungen Fehler beim öffnen des Ordners
- fixed: Rubrik = Themen es wird KEIN Inhalt angezeigt
- fixed: Videos können nicht abgespielt werden (läuft jetzt über "script.module.youtube.dl")

[B]Version 1.0.2  (23.08.2019)[/B] by realvito
- fixed: ständiger Encodingfehler bei Umlauten in den Bildern

[B]Version 1.0.3  (11.09.2019)[/B] by realvito
- fixed: Live-Stream startet nicht (wird jetzt von der Webseite ausgelesen)

B]Version 1.0.4  (03.02.2020)[/B] by realvito
- last OLDVERSION with Path = plugin.video.L0RE.weltderwunder

==============================================================================

[B]Version 2.0.5  (03.02.2020)[/B] by realvito
- Pluginname changed for KODI-compatibility (old=plugin.video.L0RE.weltderwunder -> new=plugin.video.tyl0re.weltderwunder)
- added: Addon kompatibel mit PYTHON-Vers.3 gemacht (für KODI-19+) :-)