@@ -21,3 +21,6 @@ B]Version 1.0.4  (03.02.2020)[/B] by realvito
 [B]Version 2.0.5  (03.02.2020)[/B] by realvito
 - Pluginname changed for KODI-compatibility (old=plugin.video.L0RE.weltderwunder -> new=plugin.video.tyl0re.weltderwunder)
 - added: Addon kompatibel mit PYTHON-Vers.3 gemacht (für KODI-19+) :-)
+
+[B]Version 2.0.6  (06.02.2020)[/B] by realvito
+- fixed: Syntaxfehler on Line 57
